--- a/configs/config.ini
+++ b/configs/config.ini
@@ -8,6 +8,7 @@ db = eth
 [common]
 MIN_TRANSFER_VALUE = 10
 MAXN_LEN_EDGES = 200
+MAX_OUT_DEGREE = 20
 TURN = 3
 contractType = TransferContract
 ;x-apiKey: 301cac89-b56c-45ab-82b4-33656d074f73
