--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ cython_debug/
 /.idea/inspectionProfiles/profiles_settings.xml
 /configs/pygraphviz-1.7-cp310-cp310-win_amd64.whl
 /.idea/vcs.xml
+*.html
