--- a/configs/config.ini
+++ b/configs/config.ini
@@ -5,12 +5,20 @@ user = root
 passwd = 123456
 
 [common]
+;spider
+;最小交易金额阈值
 MIN_TRANSFER_VALUE = 10
+;最大边数阈值
 MAXN_LEN_EDGES = 200
+
+;visiable
+;最大出度
 MAX_OUT_DEGREE = 100
+
 ;x-apiKey: 301cac89-b56c-45ab-82b4-33656d074f73
 ;d5d23da2-2fd0-47e0-a6b6-8eca22807037
 apiKey = 301cac89-b56c-45ab-82b4-33656d074f73
+
 host = https://www.oklink.com
 
 [api]
