--- a/configs/config.ini
+++ b/configs/config.ini
@@ -17,7 +17,7 @@ MAX_OUT_DEGREE = 100
 
 ;x-apiKey: 301cac89-b56c-45ab-82b4-33656d074f73
 ;d5d23da2-2fd0-47e0-a6b6-8eca22807037
-apiKey = 301cac89-b56c-45ab-82b4-33656d074f73
+;apiKey = 301cac89-b56c-45ab-82b4-33656d074f73
 
 host = https://www.oklink.com
 
