--- a/configs/config.ini
+++ b/configs/config.ini
@@ -19,11 +19,13 @@ host = https://www.oklink.com
 
 [api]
 ;eth
-;urltransfer = host + "/api/explorer/v1/eth/addresses/{}/transfers"  # 获取交易信息API
-;urlholder = host + "/api/explorer/v1/eth/addresses/{}/holders?limit=100&tokenType=ERC20"  # 获取地址余额API
-
+ethtransaction = /api/explorer/v1/eth/addresses/{}/transactionsByClassfy/condition
+ethtransfer = /api/explorer/v1/eth/addresses/{}/transfers/condition
+ercholder = /api/explorer/v1/eth/addresses/{}/holders
+ethholder = /api/explorer/v1/eth/addresses/{}
 ;trx
 trxtransfer = /api/explorer/v1/trx/transfers
 trxtransaction = /api/explorer/v1/trx/transactions
-trxholdertrc20 = /api/explorer/v1/trx/holders/tokens/{}/{}?limit=100
-trxinfo = /api/explorer/v1/trx/addresses/info/{}
+trcholder = /api/explorer/v1/trx/holders/tokens/{}/{}
+trxholder = /api/explorer/v1/trx/addresses/info/{}
+
