--- a/.gitignore
+++ b/.gitignore
@@ -152,7 +152,7 @@ cython_debug/
 /configs/pygraphviz-1.7-cp310-cp310-win_amd64.whl
 /.idea/vcs.xml
 *.html
-/configs/eth
-/configs/trx
+/configs/eth/*
+/configs/trx/*
 result/
 *.zip
