--- a/configs/config.ini
+++ b/configs/config.ini
@@ -14,6 +14,11 @@ MAXN_LEN_EDGES = 80
 ;visiable
 ;最大出度
 MAX_OUT_DEGREE = 40
+
+;
+THRESHOLD_OF_USDT = 10000
+
+;时间戳（时间剪枝
 TIME_STAMP = 1642003200
 host = https://www.oklink.com
 
