--- a/configs/config.ini
+++ b/configs/config.ini
@@ -9,11 +9,19 @@ passwd = 123456
 ;最小交易金额阈值
 MIN_TRANSFER_VALUE = 10
 ;最大边数阈值
-MAXN_LEN_EDGES = 80
+MAXN_LEN_EDGES = 200
 
 ;visiable
 ;最大出度
-MAX_OUT_DEGREE = 40
+MAX_OUT_DEGREE = 80
+
+;交易价格阈值
+THRESHOLD_OF_VALUE = 200000
+
+;交易次数阈值
+THRESHOLD_OF_COUNT = 8
+
+;时间戳
 TIME_STAMP = 1642003200
 host = https://www.oklink.com
 
