--- a/configs/config.ini
+++ b/configs/config.ini
@@ -15,8 +15,11 @@ MAXN_LEN_EDGES = 80
 ;最大出度
 MAX_OUT_DEGREE = 40
 
-;
-THRESHOLD_OF_USDT = 10000
+;交易价格阈值
+THRESHOLD_OF_VALUE = 200000
+
+;交易次数阈值
+THRESHOLD_OF_COUNT = 8
 
 ;时间戳（时间剪枝
 TIME_STAMP = 1642003200
