--- a/configs/config.ini
+++ b/configs/config.ini
@@ -2,7 +2,7 @@
 host = 127.0.0.1
 port = 3306
 user = root
-passwd = 123456
+passwd = root
 
 [common]
 ;spider
@@ -22,8 +22,9 @@ THRESHOLD_OF_VALUE = 200000
 THRESHOLD_OF_COUNT = 8
 
 ;时间戳（时间剪枝
-TIME_STAMP = 1645113600
+MIN_TIME_STAMP = 2022-03-10 00:00:00
 
+MAX_TIME_STAMP = 2099-01-01 00:00:00
 host = https://www.oklink.com
 
 [api]
@@ -37,4 +38,7 @@ trxtransfer = /api/explorer/v1/trx/transfers
 trxtransaction = /api/explorer/v1/trx/transactions
 trcholder = /api/explorer/v1/trx/holders/tokens/{}/{}
 trxholder = /api/explorer/v1/trx/addresses/info/{}
-
+;bnb
+bnbtransaction = /api/explorer/v1/bsc/addresses/{}/transactionsByClassfy
+bnbholder = /api/explorer/v1/bsc/addresses/{}
+bepholder = /api/explorer/v1/bsc/addresses/{}/holders
