--- a/.gitignore
+++ b/.gitignore
@@ -149,7 +149,6 @@ cython_debug/
 /.idea/modules.xml
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/vcs.xml
-*.html
-result/
+/.idea
 *.zip
 /.idea/encodings.xml
