--- a/configs/config.ini
+++ b/configs/config.ini
@@ -22,22 +22,28 @@ THRESHOLD_OF_VALUE = 200000
 THRESHOLD_OF_COUNT = 8
 
 ;时间戳（时间剪枝
-MIN_TIME_STAMP = 2022-03-10 00:00:00
+MIN_TIME_STAMP = 2022-03-15 00:00:00
 
 MAX_TIME_STAMP = 2099-01-01 00:00:00
 host = https://www.oklink.com
 
 [api]
+
 ;eth
 ethtransaction = /api/explorer/v1/eth/addresses/{}/transactionsByClassfy/condition
 ethtransfer = /api/explorer/v1/eth/addresses/{}/transfers/condition
 ercholder = /api/explorer/v1/eth/addresses/{}/holders
 ethholder = /api/explorer/v1/eth/addresses/{}
+ethinternaltransfer = /api/explorer/v1/eth/addresses/{}/internalTx/condition
+ethinternal = /api/explorer/v1/eth/internalTransactions
+ercinternal = /api/explorer/v1/eth/transfers
+
 ;trx
 trxtransfer = /api/explorer/v1/trx/transfers
 trxtransaction = /api/explorer/v1/trx/transactions
 trcholder = /api/explorer/v1/trx/holders/tokens/{}/{}
 trxholder = /api/explorer/v1/trx/addresses/info/{}
+
 ;bnb
 bnbtransaction = /api/explorer/v1/bsc/addresses/{}/transactionsByClassfy
 bnbholder = /api/explorer/v1/bsc/addresses/{}
