--- a/configs/config.ini
+++ b/configs/config.ini
@@ -2,7 +2,7 @@
 host = 127.0.0.1
 port = 3306
 user = root
-passwd = root
+passwd = 123456
 
 [common]
 ;spider
@@ -13,7 +13,7 @@ MAXN_LEN_EDGES = 800
 
 ;visiable
 ;最大出度
-MAX_OUT_DEGREE = 80
+MAX_OUT_DEGREE = 60
 
 ;交易价格阈值
 THRESHOLD_OF_VALUE = 200000
@@ -22,9 +22,9 @@ THRESHOLD_OF_VALUE = 200000
 THRESHOLD_OF_COUNT = 8
 
 ;时间戳（时间剪枝
-MIN_TIME_STAMP = 2022-03-15 00:00:00
+MIN_TIME_STAMP = 2021-11-22 00:00:00
 
-MAX_TIME_STAMP = 2099-01-01 00:00:00
+MAX_TIME_STAMP = 2021-11-24 00:00:00
 host = https://www.oklink.com
 
 [api]
@@ -43,6 +43,9 @@ trxtransfer = /api/explorer/v1/trx/transfers
 trxtransaction = /api/explorer/v1/trx/transactions
 trcholder = /api/explorer/v1/trx/holders/tokens/{}/{}
 trxholder = /api/explorer/v1/trx/addresses/info/{}
+trxinternaltransfer = /api/explorer/v1/trx/internalTransactions
+trxinternal = /api/explorer/v1/trx/internalTransactions
+trcinternal = /api/explorer/v1/trx/transfers
 
 ;bnb
 bnbtransaction = /api/explorer/v1/bsc/addresses/{}/transactionsByClassfy
