--- a/configs/config.ini
+++ b/configs/config.ini
@@ -22,9 +22,9 @@ THRESHOLD_OF_VALUE = 200000
 THRESHOLD_OF_COUNT = 8
 
 ;时间戳（时间剪枝
-MIN_TIME_STAMP = 2021-11-22 00:00:00
+MIN_TIME_STAMP = 2022-02-01 00:00:00
 
-MAX_TIME_STAMP = 2021-11-24 00:00:00
+MAX_TIME_STAMP = 2022-11-24 00:00:00
 host = https://www.oklink.com
 
 [api]
@@ -48,6 +48,10 @@ trxinternal = /api/explorer/v1/trx/internalTransactions
 trcinternal = /api/explorer/v1/trx/transfers
 
 ;bnb
-bnbtransaction = /api/explorer/v1/bsc/addresses/{}/transactionsByClassfy
+bnbtransfer = /api/explorer/v1/bsc/addresses/{}/transfers/condition
+bnbtransaction = /api/explorer/v1/bsc/addresses/{}/transactionsByClassfy/condition
 bnbholder = /api/explorer/v1/bsc/addresses/{}
 bepholder = /api/explorer/v1/bsc/addresses/{}/holders
+bnbinternaltransfer = /api/explorer/v1/bsc/addresses/{}/internalTx/condition
+bnbinternal = /api/explorer/v1/trx/internalTransactions
+bepinternal = /api/explorer/v1/trx/transfers
